# HFT-MicroArbitrage-C5N

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy_c5n.bat  docker-compose.c5n.yml  monitor_c5n.bat  package-lock.json
Phase2_Tasks/: Test_Engineer_Tasks.md
configs/: .env.c5n.testing
docs/: deploy_iterative.md
frontend_dashboard/: README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
frontend_dashboard/.next/: trace
frontend_dashboard/.next/cache/: .rscinfo
frontend_dashboard/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend_dashboard/.next/server/app/: page.js  page_client-reference-manifest.js
frontend_dashboard/.next/server/vendor-chunks/: @swc.js  sonner.js
frontend_dashboard/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend_dashboard/.next/static/webpack/: webpack.01de4b6058a6a858.hot-update.js  webpack.11002ef7ee95aa7c.hot-update.js  webpack.2ac4d026abe168d4.hot-update.js  webpack.494308be2da951e8.hot-update.js  webpack.70c9ea5fbc723b50.hot-update.js  webpack.a70c377932340636.hot-update.js  webpack.b9cc6eeb36ed65bc.hot-update.js  (+2 more)
frontend_dashboard/src/: config.ts
frontend_dashboard/src/app/: globals.css  layout.tsx  page.tsx
frontend_dashboard/src/components/: DashboardLayout.tsx  KpiDashboard.tsx  OrderBookDisplay.tsx  StrategyControlPanel.tsx  TradingViewWidget.tsx
frontend_dashboard/src/contexts/: WebSocketDataContext.tsx
frontend_dashboard/src/hooks/: useOrderBook.ts
frontend_dashboard/src/lib/: types.ts  websocketService.ts
src/: config.rs  lib.rs  main.rs
tmp/: hft_deployment_tutorial.md
(+32 files in other folders)
